# ss_portfolio

./: README.md
projects/alphaagent/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
projects/alphaagent/.github/workflows/: ci.yml
projects/alphaagent/agent/: __init__.py  config.py  graph.py  llm.py  safe_exec.py  schema_loader.py  state.py
projects/alphaagent/agent/nodes/: critic.py  executor.py  explainer.py  planner.py  sql_writer.py
projects/alphaagent/airflow/dags/: alphaagent_batch.py  alphaagent_streaming.py
projects/alphaagent/api/: deps.py  logging_config.py  main.py  models.py  routes.py
projects/alphaagent/content/: linkedin_post.md  substack_post.md
projects/alphaagent/data_generator/: generate.py
projects/alphaagent/dbt_project/: dbt_project.yml  profiles.yml
projects/alphaagent/dbt_project/models/: sources.yml
projects/alphaagent/dbt_project/models/marts/: dim_portfolios.sql  fct_portfolio_performance_daily.sql  fct_portfolio_risk_daily.sql  fct_position_attribution.sql  fct_trade_activity_daily.sql  marts.yml
projects/alphaagent/dbt_project/tests/: assert_nav_breach.sql
projects/alphaagent/docker/postgres/: init.sql
projects/alphaagent/docs/: RUNBOOK.md
projects/alphaagent/docs/adr/: 001-langgraph-over-prompt-chaining.md  002-postgres-over-snowflake.md  003-critic-as-sqlglot-not-llm.md
projects/alphaagent/dq/: run_expectations.py
projects/alphaagent/evals/: golden.yaml  results.csv  run.py  scorecard.md
projects/alphaagent/ingestion/: config.py
projects/alphaagent/ingestion/batch/: load_raw.py
projects/alphaagent/ingestion/streaming/: consumer.py  producer.py
projects/alphaagent/lineage/: emit_dbt_lineage.py
projects/alphaagent/scripts/: demo_screenshots.py  smoke_test.sh
projects/alphaagent/tests/unit/: test_api_routes.py
projects/alphaagent/ui/: app.py
(+7 files in other folders)
