[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaagent"
version = "0.1.0"
description = "Agentic Text-to-SQL & Data Quality Copilot for Portfolio Analytics"
authors = [{name = "Swati Sahu"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  # Core
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
  "structlog>=24.1",
  # Data
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=15.0",
  "faker>=25.0",
  # Database
  "psycopg[binary]>=3.1",
  "psycopg-pool>=3.2",
  "sqlalchemy>=2.0",
  "sqlglot>=23.0",
  # Streaming
  "confluent-kafka>=2.4",
  # Transform / DQ
  "dbt-core>=1.7",
  "dbt-postgres>=1.7",
  "great-expectations>=0.18",
  # Lineage
  "openlineage-python>=1.14",
  # Agent stack
  "langgraph>=0.1.0",
  "langchain>=0.2",
  "langchain-anthropic>=0.1.15",
  "langchain-openai>=0.1",
  "anthropic>=0.31",
  "openai>=1.35",
  # Serving
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "streamlit>=1.35",
  "plotly>=5.22",
  # Utils
  "httpx>=0.27",
  "pyyaml>=6.0",
  "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "black>=24.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "ipykernel>=6.29",
]

[tool.setuptools]
packages = ["data_generator", "ingestion", "agent", "api", "evals", "dq", "lineage"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # handled by black

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
  "integration: requires running Docker services",
]
